@@ -1,0 +1,2 @@
+1	が
+2	が
